[workspace]
members = ["vpn"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
bytes = "1"
clap = { version = "4.4.7", features = ["derive"] }
dashmap = "5.5.3"
flate2 = "1"
futures = "0.3"
prost = "0.13.1"
prost-build = "0.13.1"
proto-builder-trait = "0.6.1"
serde = { version = "1.0.137", features = ["derive"] }
thiserror = "1.0.30"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-util = { version = "0.7.11", features = ["codec", "compat"] }
tokio-stream = "0.1.15"
tonic = { version = "0.12.0", features = ["zstd", "tls"] }
tonic-build = "0.12.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.9.1", features = ["v4"] }
yamux = "0.9"
