[workspace]
members = ["vpn"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
async-std = { version = "1.12.0", features = ["unstable"] }
bytes = "1"
chacha20poly1305 = "0.10.1"
chrono = "0.4.38"
clap = { version = "4.4.7", features = ["derive"] }
dashmap = "6.0.1"
flate2 = "1"
futures = "0.3"
futures-timer = "3.0.3"
prost = "0.13.1"
prost-build = "0.13.1"
proto-builder-trait = "0.6.1"
quinn = "0.11.2"
quinn-proto = "0.11.2"
rand = "0.8.5"
rcgen = "0.13.1"
rustls = { version = "0.23.5", default-features = false, features = ["ring", "std"] }
serde = { version = "1.0.137", features = ["derive"] }
thiserror = "1.0.30"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-util = { version = "0.7.11", features = ["codec", "compat"] }
tokio-stream = "0.1.15"
tonic = { version = "0.12.0", features = ["zstd", "tls"] }
tonic-build = "0.12.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.9.1", features = ["v4"] }
